updated html file and added picture

--- a/index.html
+++ b/index.html
@@ -5,6 +5,24 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Heading One</h1>
+    <h1>Scary Godmother: Halloween Spooktakular</h1>
+<img src="scarygodmother.webp" alt="Scary Godmother">
+
+<h2>Release Date: October 22, 2003</h2>
+
+<p> Scary Godmother: Halloween Spooktakular is a 2003 Canadian animated
+    Halloween comedy film based on the Scary Godmother series of books
+    by Jill Thompson, specifically a community theater stage production
+    of the first book.
+</p>
+
+<p>This movie follows the first trick or treating adventure of Hannah Marie,
+    a young girl whose rotten older cousin is babysitting her one dark
+Halloween. Unhappy to be saddled with Hannah, her cousin cooks up a scheme to 
+frighten her. But his scheme backfires when Hannah gets help from her
+Scary Godmother. </p>
+
+
+
 </body>
 </html>
